opti conf java for lucene